# tatami_hdf5

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: CompressedSparseMatrix_8hpp.html  CompressedSparseMatrix_8hpp_source.html  DenseMatrix_8hpp.html  DenseMatrix_8hpp_source.html  Doxyfile  Hdf5CompressedSparseMatrix_8hpp.html  Hdf5CompressedSparseMatrix_8hpp_source.html  Hdf5DenseMatrix_8hpp.html  Hdf5DenseMatrix_8hpp_source.html  annotated.html  classes.html  classtatami__hdf5_1_1CompressedSparseMatrix-members.html  classtatami__hdf5_1_1CompressedSparseMatrix.html  classtatami__hdf5_1_1CompressedSparseMatrix__coll__graph.map  classtatami__hdf5_1_1CompressedSparseMatrix__inherit__graph.md5  classtatami__hdf5_1_1DenseMatrix-members.html  classtatami__hdf5_1_1DenseMatrix.html  classtatami__hdf5_1_1DenseMatrix__coll__graph.md5  classtatami__hdf5_1_1DenseMatrix__inherit__graph.map  classtatami__hdf5_1_1Hdf5CompressedSparseMatrix-members.html  classtatami__hdf5_1_1Hdf5CompressedSparseMatrix.html  classtatami__hdf5_1_1Hdf5CompressedSparseMatrix__coll__graph.map  classtatami__hdf5_1_1Hdf5CompressedSparseMatrix__coll__graph.md5  classtatami__hdf5_1_1Hdf5CompressedSparseMatrix__inherit__graph.map  classtatami__hdf5_1_1Hdf5CompressedSparseMatrix__inherit__graph.md5  classtatami__hdf5_1_1Hdf5DenseMatrix-members.html  classtatami__hdf5_1_1Hdf5DenseMatrix.html  classtatami__hdf5_1_1Hdf5DenseMatrix__coll__graph.map  classtatami__hdf5_1_1Hdf5DenseMatrix__coll__graph.md5  classtatami__hdf5_1_1Hdf5DenseMatrix__inherit__graph.map  classtatami__hdf5_1_1Hdf5DenseMatrix__inherit__graph.md5  dir_199b33aff6fd440ccb32a7c0defe24db.html  dir_2ac1ff629bb61bae86cf06b3b32f98e8.html  dir_2ac1ff629bb61bae86cf06b3b32f98e8_dep.map  dir_2ac1ff629bb61bae86cf06b3b32f98e8_dep.md5  dir_83e444664d05b6579ca80b4a6318f0ce.html  dir_83e444664d05b6579ca80b4a6318f0ce_dep.map  dir_83e444664d05b6579ca80b4a6318f0ce_dep.md5  doxygen_crawl.html  files.html  (+52 more)
docs/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_a.js  classes_b.js  enums_1.js  enums_5.js  files_2.js  files_3.js  files_5.js  files_6.js  files_7.js  files_b.js  files_c.js  files_d.js  files_e.js  files_f.js  functions_0.js  functions_1.js  functions_10.js  (+32 more)
include/tatami_hdf5/: CompressedSparseMatrix.hpp  DenseMatrix.hpp  Hdf5CompressedSparseMatrix.hpp  Hdf5DenseMatrix.hpp  load_compressed_sparse_matrix.hpp  load_dense_matrix.hpp  load_hdf5_matrix.hpp  primary_sparse_utils.hpp  secondary_sparse_utils.hpp  serialize.hpp  sparse_primary.hpp  sparse_secondary.hpp  sparse_utils.hpp  tatami_hdf5.hpp  utils.hpp  write_compressed_sparse_matrix.hpp  write_sparse_matrix_to_hdf5.hpp
include/tatami_hdf5/class/: Hdf5CompressedSparseMatrix.hpp  Hdf5DenseMatrix.hpp  utils.hpp
include/tatami_hdf5/utils/: load_hdf5_matrix.hpp  write_sparse_matrix_to_hdf5.hpp
tests/: CMakeLists.txt
tests/src/: CompressedSparseMatrix.cpp  DenseMatrix.cpp  Hdf5CompressedSparseMatrix.cpp  Hdf5DenseMatrix.cpp  custom_parallel.h  load_compressed_sparse_matrix.cpp  load_dense_matrix.cpp  load_hdf5_matrix.cpp  utils.cpp  write_compressed_sparse_matrix.cpp  write_sparse_matrix_to_hdf5.cpp
